--- a/examples/Reviewer_Tool_dev.ipynb
+++ b/examples/Reviewer_Tool_dev.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 456,
    "id": "8ead7f58",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 457,
    "id": "c5dc5f50",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 458,
    "id": "ed979494",
    "metadata": {
     "scrolled": true
@@ -674,7 +674,7 @@
        "[642 rows x 446 columns]"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 458,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 459,
    "id": "ef9e93e4",
    "metadata": {},
    "outputs": [
@@ -729,24 +729,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>000725_ZS_2668</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Option 3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>asdf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>005982_GD_1875</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>Option 0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>asdfasdf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>012413_AT_1634</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>Option 2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>asdfsadf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>016198_VX_1736</th>\n",
@@ -767,16 +767,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                purity  class  rating  description\n",
-       "sample_id                                         \n",
-       "000725_ZS_2668     NaN    NaN     NaN          NaN\n",
-       "005982_GD_1875     NaN    NaN     NaN          NaN\n",
-       "012413_AT_1634     NaN    NaN     NaN          NaN\n",
-       "016198_VX_1736     NaN    NaN     NaN          NaN\n",
-       "022613_PU_3426     NaN    NaN     NaN          NaN"
+       "                purity     class  rating description\n",
+       "sample_id                                           \n",
+       "000725_ZS_2668     2.0  Option 3     2.0        asdf\n",
+       "005982_GD_1875     0.1  Option 0    12.0    asdfasdf\n",
+       "012413_AT_1634     0.4  Option 2    10.0    asdfsadf\n",
+       "016198_VX_1736     NaN       NaN     NaN         NaN\n",
+       "022613_PU_3426     NaN       NaN     NaN         NaN"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 460,
    "id": "fa21ce4b",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 463,
    "id": "d6c3e95e",
    "metadata": {
     "scrolled": false
@@ -1079,23 +1079,90 @@
     "\n",
     "\n",
     "test_app.add_table('maf', 'DFCI_local_sample_dfci_maf_fn', ['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
-    "test_app.add_table('maf', 'DFCI_local_sample_dfci_maf_fn', ['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode', 'Start_Position'])\n",
-    "\n",
-    "test_app.run_app(mode='external', port=8056)\n"
+    "test_app.add_table('maf', 'DFCI_local_sample_dfci_maf_fn', ['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode', 'Start_Position'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "id": "7759a48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-7001:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.7/threading.py\", line 917, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.7/threading.py\", line 865, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/retrying.py\", line 49, in wrapped_f\n",
+      "    return Retrying(*dargs, **dkw).call(f, *args, **kw)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/retrying.py\", line 212, in call\n",
+      "    raise attempt.get()\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/retrying.py\", line 247, in get\n",
+      "    six.reraise(self.value[0], self.value[1], self.value[2])\n",
+      "  File \"/usr/lib/python3/dist-packages/six.py\", line 693, in reraise\n",
+      "    raise value\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/retrying.py\", line 200, in call\n",
+      "    attempt = Attempt(fn(*args, **kwargs), attempt_number, False)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py\", line 292, in run\n",
+      "    super_run_server(**kwargs)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/dash/dash.py\", line 2047, in run_server\n",
+      "    self.server.run(host=host, port=port, debug=debug, **flask_run_options)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/flask/app.py\", line 920, in run\n",
+      "    run_simple(t.cast(str, host), port, self, **options)\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/werkzeug/serving.py\", line 1017, in run_simple\n",
+      "    inner()\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/werkzeug/serving.py\", line 966, in inner\n",
+      "    fd=fd,\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/werkzeug/serving.py\", line 790, in make_server\n",
+      "    host, port, app, request_handler, passthrough_errors, ssl_context, fd=fd\n",
+      "  File \"/home/cchu/.local/lib/python3.7/site-packages/werkzeug/serving.py\", line 693, in __init__\n",
+      "    super().__init__(server_address, handler)  # type: ignore\n",
+      "  File \"/usr/lib/python3.7/socketserver.py\", line 452, in __init__\n",
+      "    self.server_bind()\n",
+      "  File \"/usr/lib/python3.7/http/server.py\", line 137, in server_bind\n",
+      "    socketserver.TCPServer.server_bind(self)\n",
+      "  File \"/usr/lib/python3.7/socketserver.py\", line 466, in server_bind\n",
+      "    self.socket.bind(self.server_address)\n",
+      "OSError: [Errno 98] Address already in use\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "Address 'http://localhost:8050' already in use.\n    Try passing a different port to run_server.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6829/2142559444.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_app\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_app\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'external'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'localhost'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8050\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_6829/3990696028.py\u001b[0m in \u001b[0;36mrun_app\u001b[0;34m(self, mode, host, port)\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0moutput_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m         \u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_server\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mport\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py\u001b[0m in \u001b[0;36mrun_server\u001b[0;34m(\n    self,\n    mode,\n    width,\n    height,\n    inline_exceptions,\n    **kwargs\n)\u001b[0m\n\u001b[1;32m    320\u001b[0m                 )\n\u001b[1;32m    321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 322\u001b[0;31m         \u001b[0mwait_for_app\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    323\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    324\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mJupyterDash\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_in_colab\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/retrying.py\u001b[0m in \u001b[0;36mwrapped_f\u001b[0;34m(*args, **kw)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;34m@\u001b[0m\u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwraps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0;32mdef\u001b[0m \u001b[0mwrapped_f\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mRetrying\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mdkw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mwrapped_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/retrying.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(self, fn, *args, **kwargs)\u001b[0m\n\u001b[1;32m    210\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrap_exception\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mattempt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_exception\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m                     \u001b[0;31m# get() on an attempt with an exception should cause it to be raised, but raise just in case\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mattempt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mRetryError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattempt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/retrying.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, wrap_exception)\u001b[0m\n\u001b[1;32m    245\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mRetryError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m                 \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    248\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3/dist-packages/six.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(tp, value, tb)\u001b[0m\n\u001b[1;32m    691\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    692\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 693\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    694\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    695\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/retrying.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(self, fn, *args, **kwargs)\u001b[0m\n\u001b[1;32m    198\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m                 \u001b[0mattempt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttempt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattempt_number\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m                 \u001b[0mtb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexc_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py\u001b[0m in \u001b[0;36mwait_for_app\u001b[0;34m()\u001b[0m\n\u001b[1;32m    316\u001b[0m                     \u001b[0;34m\"Address '{url}' already in use.\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m                     \"    Try passing a different port to run_server.\".format(\n\u001b[0;32m--> 318\u001b[0;31m                         \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    319\u001b[0m                     )\n\u001b[1;32m    320\u001b[0m                 )\n",
+      "\u001b[0;31mOSError\u001b[0m: Address 'http://localhost:8050' already in use.\n    Try passing a different port to run_server."
+     ]
+    }
+   ],
+   "source": [
+    "test_app.run_app(mode='external', host='localhost', port=8050)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3c2ecc",
+   "id": "dd27a94b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "test_app = TestApp(test_rd)\n",
-    "test_app.add_annot_input()\n",
-    "test_app.add_more_components([list_of_components_predefined])\n",
-    "test_app.run_app(mode='external')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
