reorganize and create basic tutorial notebook

--- a/examples/Reviewer_Tool_dev.ipynb
+++ b/examples/Reviewer_Tool_dev.ipynb
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 351,
    "id": "fa21ce4b",
    "metadata": {},
    "outputs": [],
@@ -862,7 +862,7 @@
     "        # TODO: option to update anotations\n",
     "        # TODO: reset function (switching samples) and a page function\n",
     "    \n",
-    "class TestApp:\n",
+    "class ReviewDataApp:\n",
     "    def __init__(self, review_data: ReviewData, host='0.0.0.0', port=8051):\n",
     "        self.prop = None\n",
     "        self.autofill_buttons = []\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc57824",
+   "id": "0e1cd315",
    "metadata": {},
    "source": [
     "# Example"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "id": "685d348b",
+   "id": "66cc06e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 352,
    "id": "d6c3e95e",
    "metadata": {
     "scrolled": false
@@ -1152,7 +1152,7 @@
     "import functools\n",
     "import time\n",
     "\n",
-    "test_app = TestApp(test_rd)\n",
+    "test_app = ReviewDataApp(test_rd)\n",
     "\n",
     "# add components\n",
     "def gen_data_summary_table(r, cols):\n",
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 353,
    "id": "7759a48e",
    "metadata": {},
    "outputs": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1a06a4",
+   "id": "cec92261",
    "metadata": {},
    "outputs": [],
    "source": []
