Add timestamp to dropdown description

--- a/Purity Reviewer Tutorial.ipynb
+++ b/Purity Reviewer Tutorial.ipynb
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 337,
    "id": "7bc1b609",
    "metadata": {},
    "outputs": [],
@@ -1050,12 +1050,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 338,
    "id": "84484eb3",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cchu/.local/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
+      "\n",
+      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://0.0.0.0:8056/\n"
+     ]
+    }
+   ],
    "source": [
     "app.run_app(mode='external', port=8056)"
    ]
@@ -1071,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92fd25f",
+   "id": "1bfbe859",
    "metadata": {},
    "outputs": [],
    "source": []
