--- a/Purity Reviewer Tutorial.ipynb
+++ b/Purity Reviewer Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "83de658a",
    "metadata": {},
    "outputs": [
@@ -30,10 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "cded4f95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cchu/.local/lib/python3.7/site-packages/rpy2/robjects/pandas2ri.py:14: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import Index as PandasIndex\n"
+     ]
+    }
+   ],
    "source": [
     "from src.Reviewers.PurityReviewer.MatchedPurityReviewer import MatchedPurityReviewer\n",
     "from src.ReviewData import ReviewDataAnnotation\n",
@@ -48,16 +57,10 @@
    "id": "1a84743d",
    "metadata": {},
    "source": [
-    "# Auto purity caller"
+    "# Auto purity caller\n",
+    "\n",
+    "Optionally, you can use `auto_call_purity` package to pre-call purities for each of your samples prior to review"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64b9dc15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "fab560e9",
    "metadata": {
     "scrolled": true
@@ -477,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "1d393af3",
    "metadata": {},
    "outputs": [
@@ -499,7 +502,7 @@
        "Name: local_absolute_rdata, Length: 209, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "f7f05aa1",
    "metadata": {
     "scrolled": true
@@ -547,7 +550,7 @@
     "                                                   df=pcyc_wm_pairs_df, \n",
     "                                                   more_annot_cols={'flags': ReviewDataAnnotation('radioitem', \n",
     "                                                                                                  options=['Confident', 'Unsure', 'No purity call']),\n",
-    "                                                                    'notes': ReviewDataAnnotation('textarea')\n",
+    "                                                                    'notes': ReviewDataAnnotation('textarea'), \n",
     "                                                                   },\n",
     "                                                  acs_col='alleliccapseg_tsv', \n",
     "                                                  maf_col='mutation_validator_validated_maf',\n",
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "0b3cc991",
    "metadata": {
     "scrolled": true
@@ -1116,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "7bc1b609",
    "metadata": {},
    "outputs": [],
@@ -1129,12 +1132,14 @@
     "                                                mut_fig_pkl_fn_col='mut_figs_pkl',\n",
     "                                                rdata_tsv_fn='local_absolute_rdata_as_tsv'\n",
     "                                               )\n",
-    "# Need to download the rdata to read it\n"
+    "\n",
+    "app.add_custom_component()\n",
+    "# Need to download the rdata to read it, \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "84484eb3",
    "metadata": {
     "scrolled": false
@@ -1155,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4e84c9",
+   "id": "a0a80b05",
    "metadata": {},
    "outputs": [],
    "source": []
