refactor with internal callback parameter

--- a/Jupyter Reviewer Tutorial.ipynb
+++ b/Jupyter Reviewer Tutorial.ipynb
@@ -857,6 +857,10 @@
       "/home/cchu/.local/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
       "\n",
       "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n",
+      "/home/cchu/.local/lib/python3.7/site-packages/pandas/core/arraylike.py:364: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in log10\n",
       "\n"
      ]
     }
