--- a/Purity Reviewer Tutorial.ipynb
+++ b/Purity Reviewer Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "83de658a",
    "metadata": {},
    "outputs": [
@@ -30,21 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "cded4f95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cchu/.local/lib/python3.7/site-packages/rpy2/robjects/pandas2ri.py:14: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
-      "  from pandas.core.index import Index as PandasIndex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.Reviewers.PurityReviewer.MatchedPurityReviewer import MatchedPurityReviewer\n",
+    "from Reviewers.MatchedPurityReviewer import MatchedPurityReviewer\n",
     "from src.ReviewData import ReviewDataAnnotation\n",
     "\n",
     "import dalmatian\n",
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -455,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "fab560e9",
    "metadata": {
     "scrolled": true
@@ -480,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1d393af3",
    "metadata": {},
    "outputs": [
@@ -502,7 +493,7 @@
        "Name: local_absolute_rdata, Length: 209, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f7f05aa1",
    "metadata": {
     "scrolled": true
@@ -525,7 +516,6 @@
      "text": [
       "rdata tsv directory already exists: /home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Purity_Reviewer_Tutorial/rdata_to_tsv\n",
       "cnp figs directory already exists: /home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Purity_Reviewer_Tutorial/cnp_figs\n",
-      "Reloading cnp figs\n",
       "mut figs directory already exists: /home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Purity_Reviewer_Tutorial/mut_figs\n",
       "Created purity review session in /home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Purity_Reviewer_Tutorial/purity_review_session\n"
      ]
@@ -534,12 +524,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cchu/cgaprojects_ibm_tAML_analysis/src/getzlab_JupyterReviewer/src/ReviewData.py:100: UserWarning:\n",
-      "\n",
-      "Input data dataframe shares columns with existing data, but are not equal.\n",
+      "/home/cchu/cgaprojects_ibm_tAML_analysis/src/getzlab_JupyterReviewer/src/ReviewData.py:100: UserWarning: Input data dataframe shares columns with existing data, but are not equal.\n",
       "Only adding columns [] to the ReviewData.data dataframe\n",
       "Remaining columns are not going to be updated.If you intend to change the ReviewData.data attribute, make a new session directory and prefill the annotation data\n",
-      "\n"
+      "  f'If you intend to change the ReviewData.data attribute, make a new session directory and prefill the annotation data')\n"
      ]
     }
    ],
@@ -555,7 +543,7 @@
     "                                                  acs_col='alleliccapseg_tsv', \n",
     "                                                  maf_col='mutation_validator_validated_maf',\n",
     "                                                  rdata_fn_col='local_absolute_rdata',\n",
-    "                                                  reload_cnp_figs=True,\n",
+    "                                                  reload_cnp_figs=False,\n",
     "                                                 )\n",
     "\n",
     "# Optionally prefill, ie run autopurity caller\n",
@@ -564,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0b3cc991",
    "metadata": {
     "scrolled": true
@@ -968,10 +956,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>Confident</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair</th>\n",
@@ -1008,19 +996,19 @@
       "text/plain": [
        "                                               purity    ploidy      flags  \\\n",
        "value                                                                        \n",
-       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair       NaN       NaN        NaN   \n",
+       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair  0.500000  2.000000  Confident   \n",
        "RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair       NaN       NaN        NaN   \n",
        "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair  0.869139  2.048304  Confident   \n",
        "RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair  0.343876  2.048390        NaN   \n",
        "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair   1.000000  1.987496        NaN   \n",
        "\n",
-       "                                             notes  \n",
-       "value                                               \n",
-       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair    NaN  \n",
-       "RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair    NaN  \n",
-       "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair    NaN  \n",
-       "RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair    NaN  \n",
-       "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair     NaN  "
+       "                                            notes  \n",
+       "value                                              \n",
+       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair  Test  \n",
+       "RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair   NaN  \n",
+       "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair   NaN  \n",
+       "RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair   NaN  \n",
+       "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair    NaN  "
       ]
      },
      "metadata": {},
@@ -1083,20 +1071,31 @@
        "      <td>RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair</td>\n",
        "      <td>2022-04-21 19:05:09.070157</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>Confident</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair</td>\n",
+       "      <td>2022-04-25 14:45:54.691637</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     purity    ploidy      flags  notes  \\\n",
-       "0  0.869139  2.048304  Confident    NaN   \n",
-       "1  0.343876  2.048390        NaN    NaN   \n",
-       "2  1.000000  1.987496        NaN    NaN   \n",
+       "     purity    ploidy      flags notes  \\\n",
+       "0  0.869139  2.048304  Confident   NaN   \n",
+       "1  0.343876  2.048390        NaN   NaN   \n",
+       "2  1.000000  1.987496        NaN   NaN   \n",
+       "3  0.500000  2.000000  Confident  Test   \n",
        "\n",
        "                                         index                   timestamp  \n",
        "0  RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair  2022-04-21 19:04:23.347031  \n",
        "1  RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair  2022-04-21 19:04:57.377282  \n",
-       "2   RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair  2022-04-21 19:05:09.070157  "
+       "2   RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair  2022-04-21 19:05:09.070157  \n",
+       "3  RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair  2022-04-25 14:45:54.691637  "
       ]
      },
      "metadata": {},
@@ -1119,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7bc1b609",
    "metadata": {},
    "outputs": [],
@@ -1133,7 +1132,7 @@
     "                                                rdata_tsv_fn='local_absolute_rdata_as_tsv'\n",
     "                                               )\n",
     "\n",
-    "app.add_custom_component()\n",
+    "# app.add_custom_component()\n",
     "# Need to download the rdata to read it, \n"
    ]
   },
@@ -1154,7 +1153,7 @@
     }
    ],
    "source": [
-    "app.run_app(mode='external', port=8057)"
+    "app.run(mode='external', port=8057)"
    ]
   },
   {
