--- a/Dev Reviewer.ipynb
+++ b/Dev Reviewer.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6495b393",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,10 +22,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e7b18cac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of dash.dependencies failed: Traceback (most recent call last):\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dependencies.py\", line 4, in <module>\n",
+      "    from ._validate import validate_callback\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/_validate.py\", line 8, in <module>\n",
+      "    from ._utils import patch_collections_abc, stringify_id, to_json\n",
+      "ImportError: cannot import name 'stringify_id' from 'dash._utils' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/_utils.py)\n",
+      "]\n",
+      "[autoreload of dash.dash failed: Traceback (most recent call last):\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dash.py\", line 27, in <module>\n",
+      "    from .dependencies import (\n",
+      "ImportError: cannot import name 'handle_grouped_callback_args' from 'dash.dependencies' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dependencies.py)\n",
+      "]\n",
+      "[autoreload of dash failed: Traceback (most recent call last):\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/__init__.py\", line 5, in <module>\n",
+      "    from .dash import Dash, no_update  # noqa: F401,E402\n",
+      "ImportError: cannot import name 'no_update' from 'dash.dash' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dash.py)\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dash_bootstrap_components'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewData, ReviewDataAnnotation\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewDataApp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewDataApp\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/Methods/JupyterReviewer/src/ReviewDataApp.py:18\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdash\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dash, dash_table\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdash\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdash_bootstrap_components\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdbc\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfunctools\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewData, ReviewDataAnnotation, AnnotationType\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dash_bootstrap_components'"
+     ]
+    }
+   ],
    "source": [
     "from src.ReviewData import ReviewData, ReviewDataAnnotation\n",
     "from src.ReviewDataApp import ReviewDataApp\n",
@@ -549,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
