rename src and git ignore

--- a/Dev Reviewer.ipynb
+++ b/Dev Reviewer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "6495b393",
    "metadata": {},
    "outputs": [
@@ -22,76 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "e7b18cac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of dash.dependencies failed: Traceback (most recent call last):\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dependencies.py\", line 4, in <module>\n",
-      "    from ._validate import validate_callback\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/_validate.py\", line 8, in <module>\n",
-      "    from ._utils import patch_collections_abc, stringify_id, to_json\n",
-      "ImportError: cannot import name 'stringify_id' from 'dash._utils' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/_utils.py)\n",
-      "]\n",
-      "[autoreload of dash.dash failed: Traceback (most recent call last):\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dash.py\", line 27, in <module>\n",
-      "    from .dependencies import (\n",
-      "ImportError: cannot import name 'handle_grouped_callback_args' from 'dash.dependencies' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dependencies.py)\n",
-      "]\n",
-      "[autoreload of dash failed: Traceback (most recent call last):\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/__init__.py\", line 5, in <module>\n",
-      "    from .dash import Dash, no_update  # noqa: F401,E402\n",
-      "ImportError: cannot import name 'no_update' from 'dash.dash' (/Users/cchu/opt/anaconda3/envs/JupyterReviewerEnv/lib/python3.8/site-packages/dash/dash.py)\n",
-      "]\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dash_bootstrap_components'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewData, ReviewDataAnnotation\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewDataApp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewDataApp\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/Methods/JupyterReviewer/src/ReviewDataApp.py:18\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdash\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dash, dash_table\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdash\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdash_bootstrap_components\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdbc\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfunctools\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mReviewData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReviewData, ReviewDataAnnotation, AnnotationType\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dash_bootstrap_components'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.ReviewData import ReviewData, ReviewDataAnnotation\n",
-    "from src.ReviewDataApp import ReviewDataApp\n",
+    "from jupyter_reviewer.ReviewData import ReviewData, ReviewDataAnnotation\n",
+    "from jupyter_reviewer.ReviewDataApp import ReviewDataApp\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -102,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "5319ee34",
    "metadata": {},
    "outputs": [
@@ -384,7 +321,7 @@
        "[5 rows x 446 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,97 +334,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b18f0342",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>purity</th>\n",
-       "      <th>class</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>000725_ZS_2668</th>\n",
-       "      <td>2.000</td>\n",
-       "      <td>Option 3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>asdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>005982_GD_1875</th>\n",
-       "      <td>0.860</td>\n",
-       "      <td>Option 1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>012413_AT_1634</th>\n",
-       "      <td>1.308</td>\n",
-       "      <td>Option 0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>016198_VX_1736</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>022613_PU_3426</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>Option 2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                purity     class  rating description\n",
-       "sample_id                                           \n",
-       "000725_ZS_2668   2.000  Option 3     2.0        asdf\n",
-       "005982_GD_1875   0.860  Option 1     NaN         NaN\n",
-       "012413_AT_1634   1.308  Option 0     NaN         NaN\n",
-       "016198_VX_1736     NaN       NaN     NaN         NaN\n",
-       "022613_PU_3426   0.000  Option 2     0.0           0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Reviewer_Tutorial'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m test_rd_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Reviewer_Tutorial\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m test_rd \u001b[38;5;241m=\u001b[39m \u001b[43mReviewData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreview_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtest_rd_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                     \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcchu_purities_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# optional if directory above already exists. \u001b[39;49;00m\n\u001b[1;32m      4\u001b[0m \u001b[43m                     \u001b[49m\u001b[43mannotate_data\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpurity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mReviewDataAnnotation\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnumber\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidate_input\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m                                      \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrating\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mReviewDataAnnotation\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnumber\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m                                      \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdescription\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mReviewDataAnnotation\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                                      \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mclass\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mReviewDataAnnotation\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mradioitem\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mOption \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m test_rd\u001b[38;5;241m.\u001b[39mannot\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[0;32m~/Desktop/Methods/JupyterReviewer/src/ReviewData.py:69\u001b[0m, in \u001b[0;36mReviewData.__init__\u001b[0;34m(self, review_dir, df, annotate_data)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistory_fn \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreview_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/history.tsv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreview_dir):\n\u001b[0;32m---> 69\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreview_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m df\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_fn, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/cchu/cgaprojects_ibm_tAML_analysis/data/test_getzlab-JupyterReviewer/Reviewer_Tutorial'"
+     ]
     }
    ],
    "source": [
